# receipt-scanner-spike

./: .gitignore  README.md  pyproject.toml
docs/: prompts.md
src/receipt_scanner/: main.py
tests/: __init__.py  test_main.py
